changes for adding favicon icon

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -25,8 +25,28 @@
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   -->
+  
+	<!-- Separe favicon icon - Start -->
+	<link rel="apple-touch-icon" sizes="57x57" href="{{ ASSET_PATH }}/images/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="{{ ASSET_PATH }}/images/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="{{ ASSET_PATH }}/images/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="{{ ASSET_PATH }}/images/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="{{ ASSET_PATH }}/images/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="{{ ASSET_PATH }}/images/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="{{ ASSET_PATH }}/images/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="{{ ASSET_PATH }}/images/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ ASSET_PATH }}/images/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="{{ ASSET_PATH }}/images/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ ASSET_PATH }}/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="{{ ASSET_PATH }}/images/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ ASSET_PATH }}/images/favicon-16x16.png">
+	<link rel="manifest" href="{{ ASSET_PATH }}/images/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="{{ ASSET_PATH }}/images/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	<!-- Separe favicon icon -->
 
-    <!-- atom & rss feed -->
+    <!-- atom & rss feed - End -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
