--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -73,10 +73,7 @@
       </div>
       <hr>
       <footer>
-        <p> <b>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} </b>
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
-        </p>
+        <p> <b>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} </b> </p>
       </footer>
 
     </div>
